<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".InicioActivity"
    tools:layout_editor_absoluteX="-10dp"
    tools:layout_editor_absoluteY="1dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="137dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/imagen_del_logo_del_aplicacion"
        android:src="@mipmap/ic_logo_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="160dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/aplicacion"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIniciarSession"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="@color/color_boton"
        android:fontFamily="sans-serif"
        android:text="@string/botton_de_inicio"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>